fixed td overflow

--- a/client/src/pages/agreements/agreementsTable/styles.css
+++ b/client/src/pages/agreements/agreementsTable/styles.css
@@ -92,6 +92,8 @@
     font-size: 14px !important;
     line-height: 20px;
     color: #000000;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .table-doc-type {
